# QtDesktopTools

./: CMakeLists.txt  README.md  cache.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preview.md  preview_dark.md  qml.qrc  qss.qrc  res.qrc  update.md
cache/: setting.json  theme.json
qml/: Background.qml  DesktopMainWindow.qml  KeyListenerSettingPage.qml  LineEdit.qml  Main.qml  NetworkHelper.qml  SearchBox.qml  ShowPressedKey.qml  Sidebar.qml  SkinSetting.qml  SliderProgress.qml
qss/: MainWindow.qss
src/: desktopwidget.cpp  desktopwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
utils/: cachemanager.cpp  cachemanager.h  keyboardlistener.cpp  keyboardlistener.h  socketlistener.cpp  socketlistener.h
